# dx-bytecode

./: .gitmodules  Cargo.toml
shaders/: LICENSE
shaders/chunks/: isg1_osg1_sfi0.hlsl
shaders/compiled/Direct3D-Rendering-Cookbook/Ch02_01RenderingPrimitives/: Depth_v.dxbc  Simple_p.dxbc
shaders/compiled/Direct3D-Rendering-Cookbook/Ch03_02WithCubeMapping/Shaders/: CubeMapPhongPS_p.dxbc  SimplePS_p.dxbc
shaders/compiled/Direct3D-Rendering-Cookbook/Ch04_02Animate/Shaders/: BlinnPhongPS_p.dxbc
shaders/compiled/Direct3D-Rendering-Cookbook/Ch05_01TessellationPrimitives/Shaders/: PhongPS_p.dxbc  VS_v.dxbc
shaders/compiled/Direct3D-Rendering-Cookbook/Ch06_01DisplacementMapping/Shaders/: SimplePS_p.dxbc
shaders/compiled/Direct3D-Rendering-Cookbook/Ch06_01DisplacementMapping_TangentSpace/Shaders/: BlinnPhongPS_p.dxbc  PhongUVPS_p.dxbc  SimplePS_p.dxbc
shaders/compiled/Direct3D-Rendering-Cookbook/Ch06_02DisplacementDecals/Shaders/: DiffusePS_p.dxbc
shaders/compiled/Direct3D-Rendering-Cookbook/Ch08_01Physics/Shaders/: PhongPS_p.dxbc
shaders/compiled/Direct3D-Rendering-Cookbook/Ch08_02Particles/Shaders/: PhongPS_p.dxbc  VS_v.dxbc
shaders/compiled/chunks/: isg1_osg1_v.dxbc
shaders/output/Direct3D-Rendering-Cookbook/Ch02_01RenderingPrimitives/: Depth.dxbc  Simple_v.dxbc
shaders/output/Direct3D-Rendering-Cookbook/Ch02_02AddingTexture/: Simple.dxbc  Simple_v.dxbc
src/: dxbc.rs  lib.rs  utils.rs
src/dxbc/: chunks.rs  mod.rs
src/dxbc/chunks/: common.rs  mod.rs  rdef.rs
tests/: dxbc.rs
(+61 files in other folders)
